--- a/packages/eoTheme/sass/etc/facsimile.scss
+++ b/packages/eoTheme/sass/etc/facsimile.scss
@@ -14,7 +14,7 @@
 		padding: 3px 5px 0;
     	text-shadow: 0 1px 2px #000000, 0 0 5px #ffffff;
     	
-    	@include background-image(radial-gradient(center , rgba(100, 100, 100, 0.3), rgba(0, 0, 0, 0) 80%));
+    	@include background-image(radial-gradient(center , rgba(100, 100, 100, 0.3), rgba(0, 0, 0, 0) 5px));
 	}
 	
 	.measure.highlighted {
