Image rights hint CSS
FreiDi specific, will be removed

--- a/packages/eoTheme/sass/etc/freidi.scss
+++ b/packages/eoTheme/sass/etc/freidi.scss
@@ -3,8 +3,9 @@
     border: 1px solid #666666;
     border-top-left-radius: 5px;
     bottom: 0;
-    height: 30px;
+    height: 20px;
     position: absolute;
     right: 0;
-    width: 100px;
+    padding: 0.3em;
+    font-size: smaller;
 }
