Basic modifications and configurations for the Reger-Werkausgabe.

--- a/packages/eoTheme/sass/etc/textViewContent.scss
+++ b/packages/eoTheme/sass/etc/textViewContent.scss
@@ -602,7 +602,7 @@
 .textViewContent span.nextLink { font-style: italic; }
 .textViewContent span.previousLink { font-style: italic; }
 .textViewContent span.upLink { font-style: italic; }
-.textViewContent p,.textViewContent div.p { margin-top: 0.3em; }
+.textViewContent p,.textViewContent div.p { margin-top: 0.3em; margin-right: 4em; }
 .textViewContent span.titlem { font-style: italic; }
 .textViewContent span.titlej { font-style: italic; }
 
