Change Edition label.

--- a/packages/eoTheme/sass/var/button/Button.scss
+++ b/packages/eoTheme/sass/var/button/Button.scss
@@ -222,7 +222,7 @@ $edirom-taskbarWindowButton-background-color: #cccccc;
 	font-size: 13px;
 	top: 16px;
 	left: 0;
-	content:'Band I/7 – Orgelstücke III';
+	content:'Modul I – Orgelwerke';
 	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.3);
 }
 
