--- a/resources/css/todo.css
+++ b/resources/css/todo.css
@@ -98,6 +98,23 @@ span.smcaps {
 span.italic {
     font-style: italic;
 }
+#navigator .navigatorCategory2 {
+    padding: 0 0 2px 10px;
+}
+
+#navigator .navigatorCategoryTitle2 {
+    color: #4d4d4d;
+    cursor: pointer;
+    font-variant: inherit;
+    padding: 0 0 2px;
+}
+
+#navigator .navigatorItem2 {
+    color: black;
+    cursor: pointer;
+    padding: 0 0 2px 10px;
+}
+
 .hidden {
     display: none;
 }
