--- a/packages/eoTheme/sass/var/window/Window.scss
+++ b/packages/eoTheme/sass/var/window/Window.scss
@@ -158,7 +158,7 @@ $button-default-color: #000000;
 	}
 	
 	.x-btn-default-small {
-		@include background-image(linear-gradient-bevel(top,darken($base-color,20%)));
+		@include background-image(linear-gradient-bevel(top,darken($window-base-color,20%)));
 		
 		.x-btn-inner {
 			line-height: 19px;
