--- a/packages/eoTheme/sass/etc/facsimile.scss
+++ b/packages/eoTheme/sass/etc/facsimile.scss
@@ -29,4 +29,25 @@
 		text-align: center;
 	}
 	
+	.annotation.ediromAnnotPrio1 .annotIcon {
+        background: rgba(0, 0, 0, 0) linear-gradient(to bottom , rgba(255, 48, 25, 0.85) 0%, rgba(207, 4, 4, 0.85) 100%) repeat scroll 0 0;
+    }
+    
+    .annotation.ediromAnnotPrio2 .annotIcon {
+        background: rgba(0, 0, 0, 0) linear-gradient(to bottom , rgba(255, 233, 91, 0.85) 0%, rgba(255, 107, 15, 0.85) 100%) repeat scroll 0 0;
+    }
+    
+    .annotation.ediromAnnotPrio3 .annotIcon {
+        background: rgba(0, 0, 0, 0) linear-gradient(to bottom , rgba(254, 252, 234, 0.85) 0%, rgba(241, 218, 54, 0.85) 100%) repeat scroll 0 0;
+    }
+    
+    .annotation .annotIcon {
+        border: 1px solid #666666;
+        border-radius: 3px;
+        box-shadow: 0 2px 4px #000;
+        height: 16px;
+        width: 20px;
+        z-index: 1;
+    }
+	
 }
